Version 4.0.19 - 2018-08-20
* Bug fixes (see mercurial logs for details)

Version 4.0.18 - 2018-08-03
* Bug fixes (see mercurial logs for details)

Version 4.0.17 - 2018-07-05
* Bug fixes (see mercurial logs for details)

Version 4.0.16 - 2018-06-11
* Bug fixes (see mercurial logs for details)

Version 4.0.15 - 2018-05-07
* Bug fixes (see mercurial logs for details)

Version 4.0.14 - 2018-03-01
* Bug fixes (see mercurial logs for details)

Version 4.0.13 - 2017-12-04
* Bug fixes (see mercurial logs for details)

Version 4.0.12 - 2017-11-07
* Bug fixes (see mercurial logs for details)

Version 4.0.11 - 2017-08-08
* Bug fixes (see mercurial logs for details)

Version 4.0.10 - 2017-07-01
* Bug fixes (see mercurial logs for details)

Version 4.0.9 - 2017-06-05
* Bug fixes (see mercurial logs for details)

Version 4.0.8 - 2017-04-03
* Bug fixes (see mercurial logs for details)
* Sanitize path in file_open against suffix (CVE-2017-0360)

Version 4.0.7 - 2017-03-10
* Bug fixes (see mercurial logs for details)

Version 4.0.6 - 2016-12-17
* Bug fixes (see mercurial logs for details)

Version 4.0.5 - 2016-11-06
* Bug fixes (see mercurial logs for details)

Version 4.0.4 - 2016-08-30
* Bug fixes (see mercurial logs for details)
* Sanitize path in file_open (CVE-2016-1242)
* Prevent read of user password hash (CVE-2016-1241)

Version 4.0.3 - 2016-08-02
* Bug fixes (see mercurial logs for details)

Version 4.0.2 - 2016-07-04
* Bug fixes (see mercurial logs for details)

Version 4.0.1 - 2016-05-11
* Bug fixes (see mercurial logs for details)

Version 4.0.0 - 2016-05-02
* Bug fixes (see mercurial logs for details)
* Add sendmail module to send transactional email
* Support Two-Phase Commit in Transaction
* Allow Report to generate text plain, XML, HTML and XHTML
* Add workflow graph on ir.model
* Add context model on ir.action.act_window
* Switch to WSGI API
* Limit the login size in LoginAttempt
* Remove LocalDict from tools
* Add LRUDictTransaction