@@ -1,3 +1,5 @@
+* Check read access on field in search domain (issue7766)
+
 Version 4.0.19 - 2018-08-20
 * Bug fixes (see mercurial logs for details)
 
